[package]
name = "st7789-test"
version = "0.1.0"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "st7789-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
toml-cfg = "0.2.0"
embedded-svc = "0.28.0"
anyhow = "1.0.86"
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "rt", "rt-multi-thread", "time", "sync" ] }
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
display-interface = "0.5.0"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"
